[project]
name = "claude-launcher"
version = "0.1.0"
description = "Launch Claude Code with isolated, per-profile login tokens and config (CLAUDE_CONFIG_DIR + setup-token)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "claude-launcher" }]
keywords = ["claude", "claude-code", "launcher", "profile", "cli"]
dependencies = []

[project.scripts]
claunch = "claude_launcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_launcher"]
