[project]
name = "claude-launcher"
version = "0.1.0"
description = "Launch Claude Code with isolated, per-profile login tokens and config (CLAUDE_CONFIG_DIR + setup-token)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "claude-launcher" }]
keywords = ["claude", "claude-code", "launcher", "profile", "cli"]
dependencies = ["pyyaml>=6"]

[project.scripts]
claunch = "claude_launcher.cli:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_launcher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
